--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,8 @@ steps:
   args:
     - '-c'
     - |
-      mix local.hex --force   && \
-      mix local.rebar --force && \
-      mix deps.get            && \
-      mix test
+      mix local.hex --force        && \
+      mix local.rebar --force      && \
+      mix deps.get                 && \
+      mix test                     && \
+      mix format --check-formatted
